--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -31,6 +31,7 @@ jobs:
 
       - name: Build
         run: hugo --minify
+        working-directory: ./base
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
